<!-- res/layout/fragment_add_restaurant.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

<!--    <TextView-->
<!--        android:id="@+id/textViewHeading"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add_restaurant_heading"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginBottom="16dp"/>-->

    <TextView
        android:id="@+id/textViewRestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_height"
        android:text="@string/restaurant_name_label"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_restaurant_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/enter_address"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewCityState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_state_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutCityState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/enter_city"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextState"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/enter_state"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCountryPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_postalcode_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutCountryPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/enter_country"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextPostalCode"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/enter_postalcode"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewLatLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_longitude_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutLatLng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/enter_latitude"
            android:inputType="number|numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/enter_longitude"
            android:inputType="number|numberDecimal|numberSigned" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:text="@string/add_restaurant_button"
        android:layout_marginTop="32dp"/>
</LinearLayout>
