<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    tools:context=".view.SearchFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"

        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchRestaurantView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/WhiteCursorSearchView"
            style="@style/CustomSearchView"
            app:iconifiedByDefault="false" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

<!--    <EditText-->
<!--        android:id="@+id/searchTermText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="@dimen/app_bar_height"-->
<!--        android:hint="@string/search_hint"-->
<!--        android:inputType="text"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/toolbar_search" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!-- Price Filter Dropdown -->
    <Spinner
        android:id="@+id/priceFilterSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:entries="@array/price_filter_options"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_search" />

    <!-- Distance Filter Input -->
    <EditText
        android:id="@+id/distanceFilterEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/distance_hint"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_search" />

    <TextView
        android:id="@+id/sortingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/distanceFilterEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sorting Options -->
    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortingLabel">

        <RadioButton
            android:id="@+id/proximityRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/prox_sort_label" />

        <RadioButton
            android:id="@+id/ratingRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/rate_sort_label" />

    </RadioGroup>

<!--    &lt;!&ndash; Search Button &ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/searchButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/search_button_label"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/sortRadioGroup" />-->


    <!-- Search Results -->
    <TextView
        android:id="@+id/noResultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/no_results_message"
        android:textSize="16sp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/searchResultsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortRadioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultsRecyclerView"
        android:layout_width="356dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noResultsTextView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
