<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

<!--    <TextView-->
<!--        android:id="@+id/textViewHeading"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add_review_heading"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginBottom="16dp"/>-->

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_height"
        android:text="@string/rating_label"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0.0"/>

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/review_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:hint="@string/comment_hint" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_symbol_label"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinnerPrice"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/price_filter_options" />

    <Button
        android:id="@+id/buttonAddReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="32dp"
        android:text="@string/add_review_button" />

<!--    <DatePicker-->
<!--        android:id="@+id/datePicker"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"/>-->

<!--    <CalendarView-->
<!--        android:id="@+id/calendarView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"/>-->


</LinearLayout>
